--- a/index.css
+++ b/index.css
@@ -1,41 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap');
-*{
-    margin: 0;
-    padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
 }
-html{
-    box-sizing: border-box;
+html {
+  box-sizing: border-box;
 }
 body {
-    margin: 0;
-    text-align: center;
-    background: #21325E;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  text-align: center;
+  background: #21325e;
+  font-family: "Poppins", sans-serif;
 }
-#container{
-    background: #3E497A;
-    width: 80%;
-    margin: 30px auto;
-    padding: 30px 20px;
+#container {
+  background: #3e497a;
+  width: 350px;
+  height: 200px;
+  margin: 100px auto;
+  padding: 70px 20px 10px;
 }
 
-p{
-    text-align: center;
-    background: #F0F0F0;
-    color: #21325E;
-    font-size: 24px;
-    margin: 10px auto;
-    padding: 10px 15px;
-    font-weight:500;
+p {
+  text-align: center;
+  background: #f0f0f0;
+  color: #21325e;
+  font-size: 24px;
+  margin: 30px auto 10px;
+  padding: 10px 15px;
+  font-weight: 500;
 }
-button{
-    background: #F1D00A;
-    padding: 7.5px 15px;
-    border: none;
-    border-radius: 2px;
-    font-size: 20px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    box-shadow: 0 7px 10px #000;
-    margin-bottom:20px; 
+button {
+  background: #f1d00a;
+  padding: 7.5px 15px;
+  border: none;
+  border-radius: 2px;
+  font-size: 20px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  box-shadow: 0 7px 10px #000;
+  margin: 30px auto 20px;
 }
